Fix spacing between grid rows

--- a/src/css/Grid.css
+++ b/src/css/Grid.css
@@ -1,3 +1,13 @@
 .grid {
+    display: flex;
+    flex-direction: column;
+    outline: none;
+    height: 100vh;
     margin: 100px 0 0;
+}
+
+.grid-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
